--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed:skills": "node seedSkills.js",
+    "seed:armours": "node seedArmours.js",
+    "seed:augmentations": "node seedAugmentations.js",
+    "seed:all": "node importAll.js"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +16,13 @@
   "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
